--- a/package.xml
+++ b/package.xml
@@ -41,14 +41,24 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>pcl_ros</build_depend>
+  <build_depend>pcl_conversions</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>pcl_msgs</build_depend>
+  <build_depend>pitt_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
+
   <run_depend>pcl_ros</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
-
+  <run_depend>pcl_conversions</run_depend>
+  <run_depend>sensor_msgs</run_depend>
+  <run_depend>pcl_msgs</run_depend>
+  <run_depend>pitt_msgs</run_depend>
+  <run_depend>message_generation</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
